force-app/main/default/objects/Opportunity_opener__c/Opportunity_opener__c.object-meta.xml
<CustomObject>
    <label>Opportunity opener closer</label>
    <nameField>
        <label>Opportunity opener  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity opener closer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>