force-app/main/default/objects/Opportunity_opener__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity opener closer (Closer)</relationshipLabel>
    <relationshipName>Opportunity_opener_closer1</relationshipName>
    <type>Lookup</type>
</CustomField>