force-app/main/default/objects/Opportunity_opener__c/fields/Is_Incorrect_Opener__c.field-meta.xml
<CustomField>
    <fullName>Is_Incorrect_Opener__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Incorrect Opener</label>
    <type>Checkbox</type>
</CustomField>