force-app/main/default/objects/Opportunity_opener__c/fields/Opener__c.field-meta.xml
<CustomField>
    <fullName>Opener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opener</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity opener closer</relationshipLabel>
    <relationshipName>Opportunity_opener_closer</relationshipName>
    <type>Lookup</type>
</CustomField>