force-app/main/default/objects/Opportunity_opener__c/fields/Opp_closer2__c.field-meta.xml
<CustomField>
    <fullName>Opp_closer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp closer2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity opener closer (Opp closer2)</relationshipLabel>
    <relationshipName>Opportunity_opener_closer3</relationshipName>
    <type>Lookup</type>
</CustomField>