force-app/main/default/objects/Opportunity_opener__c/fields/Opp_opener2__c.field-meta.xml
<CustomField>
    <fullName>Opp_opener2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp opener2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity opener closer (Opp opener2)</relationshipLabel>
    <relationshipName>Opportunity_opener_closer2</relationshipName>
    <type>Lookup</type>
</CustomField>