force-app/main/default/objects/Opportunity_opener__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>